# mmrobot_05_01

./: README.md
mmrobot/: .gitignore  README.md
mmrobot/mm_control/mm_arm_control/: CMakeLists.txt  bringup_test_shell  package.xml
mmrobot/mm_control/mm_arm_control/launch/: package.xml  simple_bringup.launch  ur10_test_run.launch
mmrobot/mm_control/mm_arm_control/scripts/: init_standby.py  moveit_ik_demo4.py  moveit_ik_test (复件).py  moveit_ik_test -12-17.py  moveit_ik_test 0307.py  moveit_ik_test-1-9-simplified.py  moveit_ik_test.py  tf_listener.py
mmrobot/mm_control/mm_endmotor_control/: CMakeLists.txt  package.xml
mmrobot/mm_control/mm_endmotor_control/msg/: motorCommand.msg
mmrobot/mm_control/mm_endmotor_control/src/: currentposition.txt  serial_port(旧,0112,秦）.cpp  serial_port-12.cpp  serial_port.cpp  serial_port0115.cpp
mmrobot/mm_control/mm_force_control/: CMakeLists.txt  package.xml
mmrobot/mm_control/mm_mobile_control/: CMakeLists.txt  package.xml
mmrobot/mm_control/mm_mobile_control/scripts/: goal_nav.py  goal_nav1.py  listener.py  mm_trans-12-3.py  mm_trans.py  talker.py
mmrobot/mm_control/mm_operation_rehearsal/: CMakeLists.txt  package.xml
mmrobot/mm_control/mm_pattern_recognition/: CMakeLists.txt  package.xml
mmrobot/mm_control/mm_pattern_recognition/srv/: RecognizeStatus.srv  ocr_rec.srv
mmrobot/mm_control/mm_powerup/: CMakeLists.txt  package.xml  startup.sh
mmrobot/mm_control/mm_powerup/launch/: mm_ini.launch
mmrobot/mm_control/mm_powerup/scripts/: mm_initial.py
mmrobot/mm_control/mm_robot_decision/: CMakeLists.txt  package.xml  read me
mmrobot/mm_control/mm_video_streamer/: CMakeLists.txt  README.md  package.xml
mmrobot/mm_control/mm_video_streamer/include/: cameraZed.h
mmrobot/mm_control/mm_video_streamer/include/streamer/: streamer.h
mmrobot/mm_control/mm_video_streamer/launch/: zed.launch  zed_streamer.launch
mmrobot/mm_control/mm_video_streamer/nginx-rtmp-related/: nginx.conf
mmrobot/mm_control/mm_video_streamer/plugins/: nodelet_plugins.xml
mmrobot/mm_control/mm_video_streamer/src/: streamer_camera_node.cpp  streamer_node.cpp  streamer_nodelet.cpp  streamer_nodelet.h
mmrobot/mm_control/mm_video_streamer/src/streamer/: streamer.cpp
mmrobot/mm_control/mm_visual_postion/: CMakeLists.txt  endeffector_to_tool_length.yaml  package.xml  sample.txt  stereo_cam_arm_model.yaml
mmrobot/mm_control/mm_visual_postion/include/mm_visual_postion/: AutoCalib.h
mmrobot/mm_control/mm_visual_postion/include/mm_visual_postion/digitalmeter/: digitalDeal.h
mmrobot/mm_control/mm_visual_postion/include/mm_visual_postion/experiment/: DataGeneratorBase.h  DataProcessorBase.h  IteractFindCornersByHough.h  TransformStampedSaver.h
mmrobot/mm_control/mm_visual_postion/include/mm_visual_postion/hand_trunck/: BaseCircleSolver.h  CircleModel.h  HandTrunkSolver.h  PreciseCircleSolver.h  PreciseCircleSolverForMultiview.h  RoughCircleSolver.h  Z_AngleSolver.h  ransac2d.h  ransac_ellipse2d.h
mmrobot/mm_control/mm_visual_postion/include/mm_visual_postion/switch/: CoordinateCalculation.h  LineRefiner.h  RectSwitchFinder.h  SwitchFinderByHough.h  particularFilter.h
mmrobot/mm_control/mm_visual_postion/include/mm_visual_postion/test/: GoldenDataFoVisualCabinet.h  NodeSimulator.h
mmrobot/mm_control/mm_visual_postion/include/mm_visual_postion/utils/: ArmCameraControlBase.h  ArmCommander.h  CheckCreatePath.h  CoordinateTransformer.h  IteractFindCorners.h  MySQLInterface.h  ObjectDefinition.h  RigidTransfomSolver.h  StereoCameraArmModel.h  StereoImageReceiver.h  hough_v3_4_5.h  image_utils.h  utils.h
mmrobot/mm_control/mm_visual_postion/include/mm_visual_postion/visual_wrapper/: VisualCabinet.h  VisualObject.h  VisualSafeWrapper.h
mmrobot/mm_control/mm_visual_postion/launch/: calibration.launch  gdb_calcul_pos.launch  usb_cam.launch  valgrind_calcul_pos.launch  visual_wrapper_and_apps.launch  visual_wrapper_and_apps_teach.launch
mmrobot/mm_control/mm_visual_postion/msg/: AppInnerRequest.msg  EquipmentPose.msg
mmrobot/mm_control/mm_visual_postion/scripts/: create_cabinet_equipment_database.sql  data_in_labo.sql  generate_qr_code.py  test_file.sql
mmrobot/mm_control/mm_visual_postion/src/: 02ZedView.cpp  AutoCalib.cpp  RigidTransformSolverTest.cpp  calcuPose.cpp  cameraZedUVC.h  light.cpp  lightDeal.h
mmrobot/mm_control/mm_visual_postion/src/digitalmeter/: checkDigits.cpp  digitalDeal.cpp
mmrobot/mm_control/mm_visual_postion/src/experiment/: SwitchDataGenerator.cpp  SwitchDataProcessor.cpp  TrunkDataGenerator.cpp  TrunkDataProcessor.cpp
mmrobot/mm_control/mm_visual_postion/src/hand_trunk/: EllipseDerivAnalyse.ipynb  HandTrunkSolverNode.cpp  PreciseCircleSolver.cpp  RoughCircleSolver.cpp  ransac_ellipse2d.cpp
mmrobot/mm_control/mm_visual_postion/src/qr_recognition/: arm_transform_receiver.py  qr_id.py  rigid_transform_solver.py  roi_extract_utils.py  stereo_image_receiver.py
mmrobot/mm_control/mm_visual_postion/src/switch/: CoordinateCalculation.cpp  MeterRecognizer.cpp  MeterRecognizerTest.cpp  RectSwitchFinder.cpp  RectSwitchFinderNode.cpp  SwitchFinderByHough.cpp  particularFilter.cpp
mmrobot/mm_control/mm_visual_postion/src/utils/: CheckCreatePath.cpp  CoordinateTransformer.cpp  hough_v3_4_5.cpp  utils.cpp
mmrobot/mm_control/mm_visual_postion/src/visual_wrapper/: TeachScript.py  VisualCabinet.cpp  VisualSafeWrapper.cpp  VisualSafeWrapperNode.cpp  VisualSafeWrapperTeachNode.cpp
mmrobot/mm_control/mm_visual_postion/test/hand_trunk_solver/: HandTrunkSolverTest.cpp
mmrobot/mm_control/mm_visual_postion/test/hand_trunk_solver/data/: golden_data.h
mmrobot/mm_control/mm_visual_postion/test/rect_switch_finder/: RectSwitchFinderTest.cpp
mmrobot/mm_control/mm_visual_postion/test/rect_switch_finder/data/: golden_data.h
mmrobot/mm_control/mm_visual_postion/test/visual_wrapper/: VisualCabinetTest.cpp  VisualSafeWrapperTest.cpp
mmrobot/mm_control/mm_zed_camera_rectification/: CMakeLists.txt  left_1K.yaml  left_2k.yaml  nodelet_plugins.xml  ost.txt  package.xml  right_1K.yaml  right_2k.yaml
(+95 files in other folders)
